Refactor test display names for clarity and add quality profile to pom.xml